# Arcus

./: .dockerignore  .gitignore  Balance Sheet - Sheet1.csv  Daily Sales 2.numbers  Dockerfile  P&L - Sheet1.csv  P&L Account.xlsx  README.md  package-lock.json  package.json  render.yaml  requirements.txt  vercel.json
Expenses/: Daily-Expenses - Sheet1.csv  Recurring Cost - Sheet1.csv
Sales/: Feb-Sales - Sheet1.csv  Jan-Sales - Sheet1.csv
backend/: .env.example  main.py  pyproject.toml  requirements.txt
data/receipts/: .gitignore
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx
frontend/src/components/: AlertsPanel.tsx  AnimatedNumber.tsx  BalanceSheetView.tsx  Categorizer.tsx  Currency.tsx  Dashboard.tsx  ExpenseChart.tsx  GlassCard.tsx  Header.tsx  MetricCard.tsx  OverviewChart.tsx  PLFlowDiagram.tsx  PLTable.tsx  ProfitMarginChart.tsx  ReceiptReviewModal.tsx  ReceiptUpload.tsx  SalesChart.tsx  ThemeToggle.tsx  TickerBar.tsx  TrendChart.tsx  UploadPanel.tsx
frontend/src/lib/: api.ts  compressImage.ts  currency.ts  theme.tsx  types.ts  ytd.ts
src/: config.py  pipeline.py
src/calculations/: balance_sheet.py  financials.py  pl_builder.py
src/data/: cleaners.py  loaders.py  ocr_parser.py  receipt_store.py  supabase_loaders.py  validator.py
src/services/: alerts.py  categorizer.py  cloud_ocr.py  export.py  receipts.py  scan_jobs.py
src/ui/: charts.py  components.py  styles.py
supabase/: schema.sql
supabase/migrations/: 001_receipt_transactions.sql
(+3 files in other folders)
