[project]
name = "arcus-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.6",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "numbers-parser>=4.0.0",
  "xlsxwriter>=3.1.0",
  "reportlab>=4.0.0",
  "numpy>=1.26.0",
]
